--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/AjusteFisicoInventario/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/AjusteFisicoInventario/Consultar.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.Erp.Info.Inventario.in_Ajuste_Info
 @using Core.Erp.Web.Helps
 @{
-    ViewBag.Title = "Modificar ajuste físico";
+    ViewBag.Title = "Consultar ajuste físico";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -14,7 +14,7 @@
         e.customArgs["in_IdProducto"] = IdProducto.GetValue();
     }
 </script>
-@using (Html.BeginForm("Modificar", "AjusteFisicoInventario", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Consultar", "AjusteFisicoInventario", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
@@ -23,7 +23,9 @@
     @Html.HiddenFor(q => q.IdMovi_inven_tipo_egr, new { @id = "IdMovi_inven_tipo_egr" })
     @Html.HiddenFor(q => q.IdNumMovi_ing, new { @id = "IdNumMovi_ing" })
     @Html.HiddenFor(q => q.IdNumMovi_egr, new { @id = "IdNumMovi_egr" })
-
+    @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
+    @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
+    @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
     if (ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
@@ -33,6 +35,53 @@
         </div>
 
     }
+    if (ViewBag.MensajeSuccess != null)
+    {
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <h4>
+                <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
+            </h4>
+        </div>
+    }
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-offset-8 col-md-1">
+                <div class="form-group">
+                    <div id="btnNuevo" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","AjusteFisicoInventario",new { Area = "Inventario", IdEmpresa = Model.IdEmpresa },null)">
+                            <i class="fa fa-plus"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <div id="btnModificar" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "AjusteFisicoInventario", new { Area = "Inventario", IdEmpresa = Model.IdEmpresa, IdSucursal = Model.IdSucursal, IdAjuste=Model.IdAjuste }, null)">
+                            <i class="fa fa-edit"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <div id="btnAnular" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "AjusteFisicoInventario", new { Area = "Inventario", IdEmpresa = Model.IdEmpresa, IdSucursal=Model.IdSucursal, IdAjuste=Model.IdAjuste }, null)">
+                            <i class="fa fa-remove"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                        <i class="fa fa-print"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
@@ -77,14 +126,6 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1">
-                <label for="IdImprimir"></label>
-                <div class="form-group">
-                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
-                        <i class="fa fa-print"></i>
-                    </button>
-                </div>
-            </div>
         </div>
     </div>
 
@@ -110,7 +151,6 @@
     </div>
 
     <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
         <a class="btn btn-default" href="@Url.Action("Index","AjusteFisicoInventario",new { Area = "Inventario" },null)">Cancelar</a>
     </div>
     @section Scripts {
@@ -120,10 +160,27 @@
 
 <script type="text/javascript">
     $(function () {
+        MostrarBotonesAccion();
+
         $("#IdSucursal").change(function () {
             CargarBodega();
         });
     });
+
+    function MostrarBotonesAccion() {
+        if ($("#Nuevo").val() == 1)
+        {
+            $("#btnNuevo").show();
+        }
+        if ($("#Modificar").val() == 1)
+        {
+            $("#btnModificar").show();
+        }
+        if ($("#Anular").val() == 1)
+        {
+            $("#btnAnular").show();
+        }
+    }
 
     function CargarBodega() {
         $("#IdBodega").empty();
