--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/AjusteFisicoInventario/_GridViewPartial_ajuste_fisico.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/AjusteFisicoInventario/_GridViewPartial_ajuste_fisico.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridViewPartial_ajuste_fisico";
-        settings.CallbackRouteValues = new { Controller = "AjusteFisicoInventario", Action = "GridViewPartial_ajuste_fisico", fecha_ini = ViewBag.fecha_ini, fecha_fin = ViewBag.fecha_fin, IdSucursal = ViewBag.IdSucursal };
+        settings.CallbackRouteValues = new { Controller = "AjusteFisicoInventario", Action = "GridViewPartial_ajuste_fisico", Nuevo = ViewBag.Nuevo };
         settings.KeyFieldName = "IdAjuste";
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
         //Configuración para que la grilla no muestre texto completo
@@ -64,30 +64,36 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "Estado")) == true)
-                {
-                    if (Convert.ToString(DataBinder.Eval(tc.DataItem, "IdCatalogo_Estado")) == "APRO")
-                    {
-                        ViewContext.Writer.Write(
-                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdAjuste = DataBinder.Eval(tc.DataItem, "IdAjuste") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                        );
-                    }
-                    else
-                    {
-                        ViewContext.Writer.Write(
-                        Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdAjuste = DataBinder.Eval(tc.DataItem, "IdAjuste") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdAjuste = DataBinder.Eval(tc.DataItem, "IdAjuste") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                        );
-                    }                    
-                }
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Consultar", "Consultar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdAjuste = DataBinder.Eval(tc.DataItem, "IdAjuste") })
+                );
+                //if (Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "Estado")) == true)
+                //{
+                //    if (Convert.ToString(DataBinder.Eval(tc.DataItem, "IdCatalogo_Estado")) == "APRO")
+                //    {
+                //        ViewContext.Writer.Write(
+                //        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdAjuste = DataBinder.Eval(tc.DataItem, "IdAjuste") },
+                //            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
+                //        );
+                //    }
+                //    else
+                //    {
+                //        ViewContext.Writer.Write(
+                //        Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdAjuste = DataBinder.Eval(tc.DataItem, "IdAjuste") }) + "&nbsp;" +
+                //        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdAjuste = DataBinder.Eval(tc.DataItem, "IdAjuste") },
+                //            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
+                //        );
+                //    }
+                //}
             });
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa  = Core.Erp.Web.Helps.SessionFixed.IdEmpresa}).ToHtmlString()
-                );
+                if (ViewBag.Nuevo == true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
+                    );
+                }
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -123,7 +129,7 @@
             });
             column.Width = Unit.Percentage(5);
         });
-
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
