--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/CatalogoTipoInventario/_GridViewPartial_catalogotipo_inventario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/CatalogoTipoInventario/_GridViewPartial_catalogotipo_inventario.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_catalogotipo_inventario";
-        settings.CallbackRouteValues = new { Controller = "CatalogoTipoInventario", Action = "GridViewPartial_catalogotipo_inventario" };
+        settings.CallbackRouteValues = new { Controller = "CatalogoTipoInventario", Action = "GridViewPartial_catalogotipo_inventario", Nuevo=ViewBag.Nuevo };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdCatalogo_tipo";
 
@@ -62,20 +62,18 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdCatalogo_tipo = DataBinder.Eval(tc.DataItem, "IdCatalogo_tipo") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdCatalogo_tipo = DataBinder.Eval(tc.DataItem, "IdCatalogo_tipo") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Consultar", "Consultar", new { IdCatalogo_tipo = DataBinder.Eval(tc.DataItem, "IdCatalogo_tipo") })
+                );
             });
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
-                );
+                if (ViewBag.Nuevo == true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    );
+                }
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -108,7 +106,7 @@
 
             });
         });
-
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
