--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/UnidadDeMedida/_GridViewPartial_unidad_medida.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/UnidadDeMedida/_GridViewPartial_unidad_medida.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_unidad_medida";
-        settings.CallbackRouteValues = new { Controller = "UnidadDeMedida", Action = "GridViewPartial_unidad_medida" };
+        settings.CallbackRouteValues = new { Controller = "UnidadDeMedida", Action = "GridViewPartial_unidad_medida", Nuevo = ViewBag.Nuevo };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdUnidadMedida";
 
@@ -57,20 +57,18 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdUnidadMedida = DataBinder.Eval(tc.DataItem, "IdUnidadMedida") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdUnidadMedida = DataBinder.Eval(tc.DataItem, "IdUnidadMedida") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Consultar", "Consultar", new { IdUnidadMedida = DataBinder.Eval(tc.DataItem, "IdUnidadMedida") })
+                );
             });
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
-                );
+                if (ViewBag.Nuevo == true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    );
+                }
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -90,6 +88,7 @@
 
             });
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
