--- a/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOC/_GridViewPartial_aprobacion_oc.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOC/_GridViewPartial_aprobacion_oc.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_aprobacion_oc";
-        settings.CallbackRouteValues = new { Controller = "AprobacionOC", Action = "GridViewPartial_aprobacion_oc", IdSucursal = ViewBag.IdSucursal, fecha_ini = ViewBag.fecha_ini, fecha_fin = ViewBag.fecha_fin };
+        settings.CallbackRouteValues = new { Controller = "AprobacionOC", Action = "GridViewPartial_aprobacion_oc" };
         settings.KeyFieldName = "IdOrdenCompra";
         settings.Width = Unit.Percentage(100);
 
@@ -71,8 +71,8 @@
             column.Width = Unit.Percentage(5);
         });
         settings.ClientSideEvents.SelectionChanged = "OnSelectionChanged";
-        settings.ClientSideEvents.BeginCallback = "OnBeginCallback";
-
+        //settings.ClientSideEvents.BeginCallback = "OnBeginCallback";
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); OnBeginCallback(s,e) }";
     });
 
 }
