--- a/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOS/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOS/Index.cshtml
@@ -122,7 +122,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="col-md-12">
-                        @Html.Action("GridViewPartial_aprobacion_os", new { IdSucursal = Model.IdSucursal, fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin })
+                        @Html.Action("GridViewPartial_aprobacion_os")
                     </div>
                 </div>
             </div>
