--- a/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOS/_GridViewPartial_aprobacion_os.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOS/_GridViewPartial_aprobacion_os.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_aprobacion_os";
-        settings.CallbackRouteValues = new { Controller = "AprobacionOS", Action = "GridViewPartial_aprobacion_os", IdSucursal = ViewBag.IdSucursal, fecha_ini = ViewBag.fecha_ini, fecha_fin = ViewBag.fecha_fin };
+        settings.CallbackRouteValues = new { Controller = "AprobacionOS", Action = "GridViewPartial_aprobacion_os" };
         settings.KeyFieldName = "IdOrdenCompra";
         settings.Width = Unit.Percentage(100);
 
@@ -71,7 +71,7 @@
             column.Width = Unit.Percentage(5);
         });
         settings.ClientSideEvents.SelectionChanged = "OnSelectionChanged";
-        settings.ClientSideEvents.BeginCallback = "OnBeginCallback";
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); OnBeginCallback(s,e) }";
 
     });
 
