--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/Index.cshtml
@@ -14,6 +14,7 @@
 @using (Html.BeginForm("Index", "OrdenServicio", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTipoServicio, new { @id = "IdTipoServicio" })
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     <div class="box ">
         <div class="box-header with-border">
