--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/AprobacionOP/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/AprobacionOP/Index.cshtml
@@ -145,7 +145,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="col-md-12">
-                        @Html.Action("GridViewPartial_AprobacionOP", new { fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
+                        @Html.Action("GridViewPartial_AprobacionOP")
                     </div>
                 </div>
             </div>
