--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/AprobacionDespacho/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/AprobacionDespacho/Index.cshtml
@@ -10,7 +10,8 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Index", "AprobacionDespacho", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
-    @Html.HiddenFor(q => q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
@@ -64,7 +65,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_aprobacion_despacho", new {  IdSucursal = Model.IdSucursal, IdBodega = Model.IdBodega })
+            @Html.Action("GridViewPartial_aprobacion_despacho")
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
