--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/AprobacionMovimientoInventario/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/AprobacionMovimientoInventario/Index.cshtml
@@ -11,8 +11,8 @@
 
 @using (Html.BeginForm())
 {
-
-    @Html.HiddenFor(q=>q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_movimiento_inventario_x_aprobar", new { IdSucursal = Model.IdSucursal, IdBodega = Model.IdBodega })
+            @Html.Action("GridViewPartial_movimiento_inventario_x_aprobar")
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
