--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/CatalogoInventario/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/CatalogoInventario/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model Core.Erp.Info.Inventario.in_CatalogoTipo_Info
+@{
     ViewBag.Title = "Consulta de catálogos de inventario";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
@@ -9,7 +10,10 @@
 
 @using (Html.BeginForm())
 {
-    @Html.Action("GridViewPartial_catalogo_inventario", new { IdCatalogo_tipo = ViewBag.IdCatalogo_tipo })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.HiddenFor(q => q.IdCatalogo_tipo, new { @id = "IdCatalogo_tipo" })
+
+    @Html.Action("GridViewPartial_catalogo_inventario", new { IdCatalogo_tipo = Model.IdCatalogo_tipo, Nuevo = ViewBag.Nuevo })
 
     <div class="box-footer">
         <a class="btn btn-default" href="@Url.Action("Index","CatalogoTipoInventario",new { dCatalogo_tipo = ViewBag.IdCatalogo_tipo, Area = "Inventario" },null)">Volver</a>
