--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/CatalogoInventario/_GridViewPartial_catalogo_inventario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/CatalogoInventario/_GridViewPartial_catalogo_inventario.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_catalogo_inventario";
-        settings.CallbackRouteValues = new { Controller = "CatalogoInventario", Action = "GridViewPartial_catalogo_inventario", IdCatalogo_tipo = ViewBag.IdCatalogo_tipo };
+        settings.CallbackRouteValues = new { Controller = "CatalogoInventario", Action = "GridViewPartial_catalogo_inventario", IdCatalogo_tipo = ViewBag.IdCatalogo_tipo, Nuevo=ViewBag.Nuevo };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdCatalogo";
 
@@ -61,20 +61,18 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdCatalogo = DataBinder.Eval(tc.DataItem, "IdCatalogo"), IdCatalogo_tipo = ViewBag.IdCatalogo_tipo }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdCatalogo = DataBinder.Eval(tc.DataItem, "IdCatalogo"), IdCatalogo_tipo = ViewBag.IdCatalogo_tipo },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Consultar", "Consultar", new { IdCatalogo = DataBinder.Eval(tc.DataItem, "IdCatalogo"), IdCatalogo_tipo = DataBinder.Eval(tc.DataItem, "IdCatalogo_tipo") })
+                );
             });
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdCatalogo_tipo = ViewBag.IdCatalogo_tipo }).ToHtmlString()
-                );
+                if (ViewBag.Nuevo == true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo", new { IdCatalogo_tipo = ViewBag.IdCatalogo_tipo }).ToHtmlString()
+                    );
+                }
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -93,6 +91,7 @@
 
             });
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
