--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/CatalogoTipoInventario/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/CatalogoTipoInventario/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Inventario.in_CatalogoTipo_Info
 @{
     ViewBag.Title = "Consulta de tipos de catálogo de inventario";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -9,8 +9,9 @@
 }
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
-    @Html.Action("GridViewPartial_catalogotipo_inventario")
+    @Html.Action("GridViewPartial_catalogotipo_inventario", new { Nuevo = ViewBag.Nuevo })
 
 }
 
