--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Categoria/_GridViewPartial_categoria.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Categoria/_GridViewPartial_categoria.cshtml
@@ -4,7 +4,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_categoria";
-        settings.CallbackRouteValues = new { Controller = "Categoria", Action = "GridViewPartial_categoria" };
+        settings.CallbackRouteValues = new { Controller = "Categoria", Action = "GridViewPartial_categoria", Nuevo = ViewBag.Nuevo };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdCategoria";
 
@@ -63,23 +63,20 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdCategoria = DataBinder.Eval(tc.DataItem, "IdCategoria") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdCategoria = DataBinder.Eval(tc.DataItem, "IdCategoria") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
-
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Consultar", "Consultar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdCategoria = DataBinder.Eval(tc.DataItem, "IdCategoria") })
+                );
             });
 
 
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa  = Core.Erp.Web.Helps.SessionFixed.IdEmpresa}).ToHtmlString()
-                );
+                if (ViewBag.Nuevo == true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
+                    );
+                }
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -97,7 +94,8 @@
             {
 
             });
-        }); settings.Columns.Add(column =>
+        });
+        settings.Columns.Add(column =>
         {
             column.Caption = "Línea";
             column.Width = Unit.Pixel(120);
@@ -114,6 +112,7 @@
                 }
             });
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
     @grid.Bind(Model).GetHtml()
