--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Presentacion/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Presentacion/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Inventario.in_presentacion_Info
 @{
     ViewBag.Title = "Consulta de presentaciones de producto";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -9,7 +9,8 @@
 }
 @using (Html.BeginForm())
 {
-
-    @Html.Action("GridViewPartial_presentacion")
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.Action("GridViewPartial_presentacion", new { Nuevo = ViewBag.Nuevo })
 
 }
