--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/ReversoMovimientoInventario/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/ReversoMovimientoInventario/Index.cshtml
@@ -11,8 +11,8 @@
 
 @using (Html.BeginForm())
 {
-
-    @Html.HiddenFor(q=>q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
@@ -114,7 +114,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_movimiento_inventario_x_reversar", new { fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal, IdBodega = Model.IdBodega, IdSigno = Model.IdSigno })
+            @Html.Action("GridViewPartial_movimiento_inventario_x_reversar")
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
