--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/UnidadDeMedida/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/UnidadDeMedida/Index.cshtml
@@ -1,6 +1,6 @@
-﻿
+﻿@model Core.Erp.Info.Inventario.in_UnidadMedida_Info
 @{
-    ViewBag.Title = "UConsulta de unidades de medida";
+    ViewBag.Title = "Consulta de unidades de medida";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -10,7 +10,7 @@
 
 @using (Html.BeginForm())
 {
-
-    @Html.Action("GridViewPartial_unidad_medida")
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.Action("GridViewPartial_unidad_medida", new { Nuevo = ViewBag.Nuevo })
 
 }
