--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/FacturaTipo/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/FacturaTipo/Index.cshtml
@@ -1,6 +1,6 @@
-﻿@model Core.Erp.Info.Contabilidad.ct_cbtecble_tipo_Info
+﻿@model Core.Erp.Info.Helps.cl_filtros_Info
 @{
-    ViewBag.Title = "Consulta de tipos de comprobante";
+    ViewBag.Title = "Consulta de tipo de facturas";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -12,6 +12,6 @@
 {
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
-
-    @Html.Action("GridViewPartial_comprobante_tipo", new { Nuevo = ViewBag.Nuevo })
+    
+    @Html.Action("GridViewPartial_facturaTipo", new { Nuevo = ViewBag.Nuevo })
 }
